prevent overflow of command results

--- a/public/scripts/extensions/quick-reply/style.less
+++ b/public/scripts/extensions/quick-reply/style.less
@@ -229,6 +229,8 @@
 
 
 #qr--qrOptions {
+	display: flex;
+	flex-direction: column;
 	> #qr--ctxEditor {
 		.qr--ctxItem {
 			display: flex;
